Added Raku language benchmark.
Added tools/benchmark_analysis.ods, a benchmark analysis worksheet.

--- a/Web_pages/fbench.html
+++ b/Web_pages/fbench.html
@@ -51,7 +51,7 @@ Trigonometry Intense Floating Point Benchmark
 </h3>
 by <a href="/">John Walker</a><br />
 December 1980<br />
-Last update: January 22nd, 2018
+Last update: September 24th, 2021
 </center>
 
 <hr />
@@ -449,7 +449,7 @@ precisely the <a href="#results">expected results</a>.
                    189.7<br />
                    499.9</td>
     <td class="e">G++ 5.4.0, <tt>-O3</tt>,
-                    Linux, <tt>double</tt><br />
+                  Linux, <tt>double</tt><br />
                   <tt>long double</tt> (80 bit)<br />
                   <tt>__float128</tt> (128 bit)<br />
                   MPFR (128 bit)<br />
@@ -563,7 +563,7 @@ precisely the <a href="#results">expected results</a>.
     <td class="ec">3.663<br />
                    9.335</td>
     <td class="e">Erlang/OTP 17, emulator 6.0, HiPE [native, {hipe, [o3]}]<br />
-                 Byte code (BEAM), Linux</td>
+                  Byte code (BEAM), Linux</td>
 </tr>
 
  <tr>
@@ -613,9 +613,9 @@ precisely the <a href="#results">expected results</a>.
 <tr>
     <th class="e">Prolog</th>
     <td class="ec">11.72<br />
-                                   5.747</td>
+                   5.747</td>
     <td class="e">SWI-Prolog 7.6.0-rc2, Linux<br />
-                                  GNU Prolog 1.4.4, Linux, (limited iterations)</td>
+                  GNU Prolog 1.4.4, Linux, (limited iterations)</td>
 </tr>
 
 <tr>
@@ -623,7 +623,7 @@ precisely the <a href="#results">expected results</a>.
     <td class="ec">12.5<br />
                                    46.3</td>
     <td class="e">Micro Focus Visual COBOL 2010, Windows 7<br />
-                                  Fixed decimal instead of <tt>computational-2</tt></td>
+                  Fixed decimal instead of <tt>computational-2</tt></td>
 </tr>
 
 <tr>
@@ -648,6 +648,14 @@ precisely the <a href="#results">expected results</a>.
     <th class="e">QBasic</th>
     <td class="ec">148.3</td>
     <td class="e">MS-DOS QBasic 1.1, Windows XP Console</td>
+</tr>
+
+<tr>
+    <th class="e">Raku</th>
+    <td class="ec">205.6<br />
+                   735.3</td>
+    <td class="e">Rakudo v2021.09/v6.d, Linux, object-oriented rewrite<br />
+                  Minimal port of Perl version</td>
 </tr>
 
 <tr>
@@ -743,7 +751,7 @@ corrects the results.
 </table>
 <address>
 <a href="/">by John Walker</a><br />
-January 12th, 2021
+September 24th, 2021
 </address>
 <br clear="right" />
 </body>
